# language_data

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
langnames/: __init__.py  build_data.py  data_dicts.py  name_dicts.py  registry_parser.py  util.py
langnames/data/trie/ar/: name_to_language.marisa
langnames/data/trie/az/: name_to_language.marisa  name_to_script.marisa  name_to_territory.marisa
langnames/data/trie/bn/: name_to_language.marisa  name_to_territory.marisa
langnames/data/trie/bs/: name_to_language.marisa  name_to_script.marisa  name_to_territory.marisa
langnames/data/trie/en/: name_to_language.marisa  name_to_script.marisa
langnames/data/trie/es/: name_to_script.marisa
langnames/data/trie/fr/: name_to_language.marisa
langnames/data/trie/jv/: name_to_language.marisa
langnames/data/trie/pa/: name_to_language.marisa  name_to_script.marisa  name_to_territory.marisa
langnames/data/trie/pt/: name_to_territory.marisa
langnames/data/trie/sr/: name_to_territory.marisa
langnames/data/trie/sv/: name_to_script.marisa
langnames/data/trie/tk/: name_to_language.marisa
langnames/data/trie/und/: name_to_language.marisa  name_to_script.marisa  name_to_territory.marisa
langnames/data/trie/uz/: name_to_language.marisa  name_to_script.marisa  name_to_territory.marisa
langnames/data/trie/yue/: name_to_language.marisa  name_to_territory.marisa
langnames/data/trie/zh/: name_to_script.marisa
language_data/: build_data.py  data_dicts.py  name_data.py  names.py  population_data.py  util.py
language_data/data/trie/af/: name_to_language.marisa
language_data/data/trie/agq/: name_to_language.marisa  name_to_territory.marisa
(+422 files in other folders)
