[tool.poetry]
name = "language_data"
version = "2.0"
description = "Supplementary data about languages used by the langcodes module"
authors = ["Elia Robyn Speer <rspeer@arborelia.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rspeer/language_data"
include = ["language_data/data", "CHANGELOG.md"]
exclude = ["language_data/data/cldr", "language_data/data/cldr-json"]

[tool.poetry.dependencies]
python = ">= 3.7"
marisa-trie = ">=1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
